--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mysql2": "^3.6.3",
-    "sequelize": "^6.35.0"
+    "sequelize": "^6.35.0",
+    "sqlite3": "^5.1.6"
   }
 }
