--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
     "mysql2": "^3.6.3",
     "sequelize": "^6.35.0",
     "sqlite3": "^5.1.6"
